--- a/bema-clinicals/src/components/nav/Navigation.module.css
+++ b/bema-clinicals/src/components/nav/Navigation.module.css
@@ -5,6 +5,7 @@
 
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .navigation-primary__item {
@@ -37,7 +38,22 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-
+  margin-left: 1.94rem;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0px 1.2rem;
+
+  width: 53.2rem;
+  height: 4.6rem;
+
+  background: var(--light-white);
+}
+
+.navigation-primary--sub__item {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2rem;
+  color: var(--pure-black);
 }
