--- a/bema-clinicals/src/styles/shared.css
+++ b/bema-clinicals/src/styles/shared.css
@@ -74,5 +74,5 @@ body {
   font-size: 1rem;
   line-height: 1rem;
   color: var(--pure-black);
-  background-color: var(--light-white);
+  background-color: var(--pure-white);
 }
