--- a/bema-clinicals/src/components/nav/Navigation.module.css
+++ b/bema-clinicals/src/components/nav/Navigation.module.css
@@ -2,10 +2,12 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-
+  width: 106.4rem;
+  background-color: orangered;
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding-left: 4rem;
 }
 
 .navigation-primary__item {
@@ -73,9 +75,42 @@
   list-style-type: none;
   background: var(--light-white);
   position: absolute;
-  top: 3rem;
+  top: 3.4rem;
+  z-index: 5;
 }
 
 .navigation-primary--sub__item:hover .dropdown-menu {
+  display: block;
+}
+
+.navigation-secondary {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  width: 106.4rem;
+  height: 4.6rem;
+  background-color: blueviolet;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 4rem;
+  gap: 4rem;
+}
+
+.navigation-secondary__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5rem;
+
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2rem;
+
+  color: var(--pure-black);
+}
+
+.navigation-secondary__item:hover .dropdown-menu {
   display: block;
 }
