style(Logo): make the Logo component responsive

--- a/bema-clinicals/src/components/logo/Logo.module.css
+++ b/bema-clinicals/src/components/logo/Logo.module.css
@@ -10,3 +10,10 @@
   height: 100%;
   object-fit: cover;
 }
+
+@media (max-width: 75em) {
+  .logo-box {
+    width: 9.3rem;
+    height: 7rem;
+  }
+}
