--- a/bema-clinicals/src/containers/header/Header.module.css
+++ b/bema-clinicals/src/containers/header/Header.module.css
@@ -6,3 +6,11 @@
   align-items: flex-start;
   justify-content: space-between;
 }
+
+@media (max-width: 75em) {
+  /* 1200px */
+
+  .navigation {
+    background-color: orange;
+  }
+} ;
