style(Hero): make the primary heading responsive
add styles to the main text box to make mobile responsive

--- a/bema-clinicals/src/components/hero/Hero.module.css
+++ b/bema-clinicals/src/components/hero/Hero.module.css
@@ -36,3 +36,23 @@
   line-height: 3.2rem;
   color: var(--pure-white);
 }
+
+@media (max-width: 37.5em) {
+  .hero__text-box {
+    width: 100%;
+    height: auto;
+    margin: 0 2.4rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .heading-primary {
+    font-size: 2.8rem;
+  }
+
+  .hero__text {
+    font-size: 1.6rem;
+  }
+}
