--- a/bema-clinicals/src/styles/shared.css
+++ b/bema-clinicals/src/styles/shared.css
@@ -94,3 +94,16 @@ body {
   color: var(--pure-black);
   background-color: var(--pure-white);
 }
+
+/*Typography styles*/
+
+.heading-secondary {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 4.2rem;
+  line-height: 4.2rem;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--semi-light-blue);
+}
