--- a/bema-clinicals/src/styles/shared.css
+++ b/bema-clinicals/src/styles/shared.css
@@ -107,3 +107,10 @@ body {
   text-transform: uppercase;
   color: var(--semi-light-blue);
 }
+
+@media (max-width: 37.5em) {
+  .heading-secondary {
+    font-size: 2.2rem;
+    line-height: 3.2rem;
+  }
+}
