--- a/bema-clinicals/src/containers/news/News.module.css
+++ b/bema-clinicals/src/containers/news/News.module.css
@@ -1,9 +1,5 @@
 .news__header-box {
   background-color: #f8f8f8;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
   padding: 6.5rem 20rem 1.9rem;
 }
 
@@ -17,8 +13,8 @@
 
 .news__upper-line {
   display: block;
-  width: 100px;
-  height: 9px;
+  width: 10rem;
+  height: 0.9rem;
   background-color: var(--dark-orange);
   margin: 0 auto 3rem;
 }
