--- a/bema-clinicals/src/containers/news/News.module.css
+++ b/bema-clinicals/src/containers/news/News.module.css
@@ -18,3 +18,14 @@
   background-color: var(--dark-orange);
   margin: 0 auto 3rem;
 }
+
+.news__image {
+  width: 100%;
+  height: 79.5rem;
+  margin-top: 5.9rem;
+
+  background-image: url("../../../public/assets/images/news-img.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
