--- a/bema-clinicals/src/components/card/Card.module.css
+++ b/bema-clinicals/src/components/card/Card.module.css
@@ -2,8 +2,10 @@
 
 .card {
   background: rgba(150, 0, 77, 0.7);
-  width: 60rem;
-  height: 70rem;
+  width: 70rem;
+  height: 75rem;
+  text-align: center;
+  padding: 5rem;
 }
 
 /*Card Typography*/
@@ -13,6 +15,8 @@
   font-size: 3.6rem;
   line-height: 5.4rem;
   color: var(--pure-white);
+
+  margin-bottom: 2rem;
 }
 
 .card__sub-title {
@@ -20,6 +24,8 @@
   font-size: 2.2rem;
   line-height: 4rem;
   color: var(--pure-white);
+
+  margin-bottom: 3.9rem;
 }
 
 .card__text {
@@ -27,4 +33,17 @@
   font-size: 1.8rem;
   line-height: 3.2rem;
   color: var(--pure-white);
+}
+
+/* Card Layout */
+
+.btn-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card__text:not(:last-child) {
+  margin-bottom: 1.9rem;
 }
