--- a/bema-clinicals/src/components/card/Card.module.css
+++ b/bema-clinicals/src/components/card/Card.module.css
@@ -1,7 +1,6 @@
 /*Card styles*/
 
 .card {
-  background: rgba(150, 0, 77, 0.7);
   width: 70rem;
   height: 75rem;
   text-align: center;
@@ -46,4 +45,8 @@
 
 .card__text:not(:last-child) {
   margin-bottom: 1.9rem;
+}
+
+.news__card {
+  background-color: rgba(150, 0, 77, 0.7);
 }
