--- a/bema-clinicals/src/containers/news/News.module.css
+++ b/bema-clinicals/src/containers/news/News.module.css
@@ -29,3 +29,15 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+@media (max-width: 56.25em) {
+  .news__header-box {
+    padding: 6.5rem 10rem 1.9rem;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .news__header-box {
+    padding: 5rem 8rem 6rem;
+  }
+}
