--- a/bema-clinicals/src/components/card/Card.module.css
+++ b/bema-clinicals/src/components/card/Card.module.css
@@ -50,3 +50,12 @@
 .news__card {
   background-color: rgba(150, 0, 77, 0.7);
 }
+
+@media (max-width: 37.5em) {
+  .card {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding: 5rem;
+  }
+}
