fix(Button): remove fixed margin from the buttons
- remove preset margin properties the button component.
- change all styles where the button exists to rely on custom white space.

--- a/bema-clinicals/src/components/hero/Hero.module.css
+++ b/bema-clinicals/src/components/hero/Hero.module.css
@@ -37,6 +37,10 @@
   color: var(--pure-white);
 }
 
+.hero__btn-wrapper {
+  margin: 3.2rem 4.9rem;
+}
+
 @media (max-width: 37.5em) {
   .hero__text-box {
     width: 100%;
