--- a/bema-clinicals/src/containers/blog/Blog.module.css
+++ b/bema-clinicals/src/containers/blog/Blog.module.css
@@ -24,8 +24,9 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  margin-top: 7.2rem;
+  padding-top: 7.2rem;
   padding-bottom: 5rem;
+  background-color: var(--light-white);
 }
 
 .blog__logo-box {
@@ -111,7 +112,7 @@
     align-items: center;
     justify-content: center;
     gap: 4rem;
-    margin-top: 5rem;
+    padding-top: 5rem;
     padding-bottom: 3rem;
   }
 
