--- a/bema-clinicals/src/containers/news/News.module.css
+++ b/bema-clinicals/src/containers/news/News.module.css
@@ -3,22 +3,6 @@
   padding: 6.5rem 20rem 1.9rem;
 }
 
-.news__header-text {
-  font-weight: 400;
-  font-size: 1.8rem;
-  line-height: 3.2rem;
-  color: var(--pure-black);
-  margin-top: 2.6rem;
-}
-
-.news__upper-line {
-  display: block;
-  width: 10rem;
-  height: 0.9rem;
-  background-color: var(--dark-orange);
-  margin: 0 auto 3rem;
-}
-
 .news__image {
   width: 100%;
   height: 79.5rem;
@@ -38,6 +22,6 @@
 
 @media (max-width: 37.5em) {
   .news__header-box {
-    padding: 5rem 8rem 6rem;
+    padding: 5rem 6rem;
   }
 }
