--- a/bema-clinicals/src/components/card/Card.module.css
+++ b/bema-clinicals/src/components/card/Card.module.css
@@ -56,6 +56,38 @@
   background-color: rgba(74, 34, 86, 0.7);
 }
 
+.service__card {
+  width: 52rem;
+  height: 42.6rem;
+  background: var(--pure-white);
+  box-shadow: 2px 2px 3rem rgba(156, 156, 192, 0.26);
+  border-radius: 0.6rem;
+  border-radius: 5px;
+}
+
+.service__card-image {
+  height: 60%;
+}
+
+.service__card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.service__card-details {
+  padding: 5.3rem 4rem;
+}
+
+.service__card-text {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2.5rem;
+
+  color: var(--pure-black);
+}
+
 @media (max-width: 37.5em) {
   .card {
     width: 100%;
