--- a/bema-clinicals/src/containers/services/Services.module.css
+++ b/bema-clinicals/src/containers/services/Services.module.css
@@ -8,3 +8,34 @@
   background-color: var(--pure-white);
   padding: 6.5rem 20rem 1.9rem;
 }
+
+.services__bullet {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2rem;
+}
+
+.services__bullet-icon-box {
+  width: 4rem;
+  height: 4rem;
+  background: #e8e8f6;
+  border-radius: 2rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.services__bullet-icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+.services__bullet-text {
+  font-weight: 700;
+  font-size: 2.5rem;
+  line-height: 4.5rem;
+  color: var(--semi-light-blue);
+}
