--- a/bema-clinicals/src/containers/services/Services.module.css
+++ b/bema-clinicals/src/containers/services/Services.module.css
@@ -9,12 +9,27 @@
   padding: 6.5rem 20rem 1.9rem;
 }
 
+.services__details {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  overflow: hidden;
+}
+
 .services__bullet {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 2rem;
+  margin: auto -1rem;
+}
+
+.services__bullet--2 {
+  justify-self: right;
+}
+
+.service__card-box {
+  margin: 5rem;
 }
 
 .services__bullet-icon-box {
