--- a/bema-clinicals/src/components/card/Card.module.css
+++ b/bema-clinicals/src/components/card/Card.module.css
@@ -88,6 +88,49 @@
   color: var(--pure-black);
 }
 
+.contact__card {
+  width: 38.7rem;
+  height: 57.2rem;
+
+  background: var(--pure-white);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07);
+  border-radius: 3px;
+}
+
+.contact__card-image {
+  width: 100%;
+  height: 50%;
+}
+
+.contact__card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 3px 3px 0 0;
+}
+
+.contact__card-details {
+  height: 50%;
+  width: 100%;
+  padding: 2rem;
+}
+
+.contact__card-title {
+  font-weight: 700;
+  font-size: 1.8rem;
+  line-height: 3.2rem;
+  color: var(--pure-black);
+
+  margin-bottom: 1.7rem;
+}
+
+.contact__card-text {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+  color: #777777;
+}
+
 @media (max-width: 56.25em) {
   .service__card {
     width: 45rem;
