--- a/bema-clinicals/src/components/buttons/Button.module.css
+++ b/bema-clinicals/src/components/buttons/Button.module.css
@@ -21,3 +21,25 @@
   border-radius: 3px;
   padding: 1.2rem 2.4rem;
 }
+
+.btn-secondary {
+  border: 0;
+  margin: 0;
+  outline: none;
+  cursor: pointer;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  font-weight: 700;
+  font-size: 1.9rem;
+  line-height: 3.4rem;
+  color: var(--dark-orange);
+  background: transparent;
+}
+
+.btn-icon {
+  width: 1.5rem;
+  height: 1.5rem;
+}
