--- a/bema-clinicals/src/containers/blog/Blog.module.css
+++ b/bema-clinicals/src/containers/blog/Blog.module.css
@@ -1,13 +1,14 @@
 .section_blog {
   width: 100%;
   height: 100%;
-  padding-top: 5rem;
+  padding-top: 1rem;
 }
 
 .blog__image {
   width: 100%;
-  height: 79.5rem;
-  margin-top: 5.9rem;
+  height: 60rem;
+
+  padding: 7rem 5.3rem 2rem;
 
   display: flex;
   flex-direction: row;
