--- a/bema-clinicals/src/containers/news/News.module.css
+++ b/bema-clinicals/src/containers/news/News.module.css
@@ -5,9 +5,9 @@
 
 .news__image {
   width: 100%;
-  height: 79.5rem;
+  height: 60rem;
 
-  padding: 5.3rem;
+  padding: 7rem 5.3rem 2rem;
 
   background-image: url("../../../public/assets/images/news-img.png");
   background-position: center;
