--- a/bema-clinicals/src/components/nav/Navigation.module.css
+++ b/bema-clinicals/src/components/nav/Navigation.module.css
@@ -24,6 +24,10 @@
   justify-content: flex-start;
 }
 
+.nav-icon {
+  fill: var(--light-blue);
+}
+
 .nav-span {
   font-weight: 500;
   font-size: 1.4rem;
@@ -41,6 +45,7 @@
 
 .icon-email {
   margin-left: 1.9rem;
+  fill: var(--light-blue);
 }
 
 .navigation-primary--sub {
