--- a/bema-clinicals/src/components/hero/Hero.module.css
+++ b/bema-clinicals/src/components/hero/Hero.module.css
@@ -7,13 +7,14 @@
   background-repeat: no-repeat;
   background-position: right;
   width: 100%;
-  height: 61.7rem;
+  height: 100%;
   padding-top: 2rem;
+  padding-bottom: 5rem;
 }
 
 .hero__text-box {
-  width: 95.3rem;
-  height: 36.5rem;
+  width: 75%;
+  height: 30%;
   margin: 0 4.9rem;
 
   display: flex;
@@ -43,7 +44,6 @@
 
 @media (max-width: 37.5em) {
   .hero__text-box {
-    width: 100%;
     height: auto;
     margin: 0 2.4rem;
 
