--- a/bema-clinicals/src/components/nav/Navigation.module.css
+++ b/bema-clinicals/src/components/nav/Navigation.module.css
@@ -40,7 +40,7 @@
 }
 
 .nav-span_email {
-  margin-left: 1.8rem;
+  margin-left: 0.46rem;
 }
 
 .icon-email {
@@ -78,6 +78,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 0.5rem;
+  cursor: pointer;
 }
 
 .dropdown-menu {
@@ -90,19 +91,24 @@
   margin: 0;
 }
 
-.dropdown-list .dropdown-list_item:not(:last-child) {
-  margin-bottom: 0.5rem;
+.dropdown-list_item {
+  display: block;
+  padding: 0.5rem;
+  cursor: pointer;
 }
 
-.navigation-primary--sub__item .dropdown-menu .dropdown-list {
-  padding: 0.5rem 1rem 1rem 4rem;
+.dropdown-list_item:hover {
+  background: var(--light-gray);
+  color: var(--light-white);
 }
+
+/* .navigation-primary--sub__item .dropdown-menu .dropdown-list {
+  padding: 0.5rem 1rem 1rem 4rem;
+} */
 
 .navigation-primary--sub__item:hover .dropdown-menu {
   display: block;
   width: 16rem;
-  height: 12rem;
-  padding: 1rem 0.5rem;
   background: var(--light-white);
   position: absolute;
   top: 2rem;
@@ -135,13 +141,13 @@
   line-height: 2rem;
 
   color: var(--pure-black);
+  cursor: pointer;
 }
 
 .navigation-secondary__item:hover .dropdown-menu {
   display: block;
 
   width: 12rem;
-  height: 12rem;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -160,9 +166,9 @@
   display: none;
 }
 
-.navigation-secondary__item .dropdown-menu .dropdown-list {
+/* .navigation-secondary__item .dropdown-menu .dropdown-list {
   padding: 1rem 1.5rem;
-}
+} */
 
 @media (max-width: 56.25em) {
   .navigation-primary {
