Fix mission styles

--- a/bema-clinicals/src/containers/with-us/WithUs.module.css
+++ b/bema-clinicals/src/containers/with-us/WithUs.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   background-color: var(--pure-white);
-  padding-right: 4rem;
+  /* padding-right: 4rem; */
 }
 
 .withUs__heading {
@@ -12,26 +12,26 @@
 
 .withUs__bg-wrapper {
   width: 100%;
-  height: 80rem;
+  height: 100vh;
   background-image: url("../../../public/assets/images/cancer-institute.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+  padding: 0rem 5rem;
 }
 
 .withUs__bg-text-box {
   width: 40%;
   height: 60%;
   background: rgba(0, 102, 153, 0.5);
-  margin: 12.3rem 6.7rem;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  padding: 8rem;
+  padding: 0rem 8rem;
 }
 
 .withUs__text {
