--- a/bema-clinicals/src/containers/news/News.module.css
+++ b/bema-clinicals/src/containers/news/News.module.css
@@ -1,6 +1,9 @@
 .news__header-box {
   background-color: #f8f8f8;
-  padding: 6.5rem 20rem 1.9rem;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 3.8rem;
+  padding-top: 3rem;
 }
 
 .news__image {
