--- a/bema-clinicals/src/containers/with-us/WithUs.module.css
+++ b/bema-clinicals/src/containers/with-us/WithUs.module.css
@@ -128,7 +128,7 @@
 @media (max-width: 56.25em) {
   .withUs__bg-text-box {
     width: 50%;
-    height: auto;
+    /* height: auto; */
   }
 }
 
@@ -143,7 +143,7 @@
 
   .withUs__bg-text-box {
     width: 80%;
-    height: auto;
+    /* height: auto; */
   }
 
   .withUs__text {
